stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: edsam22/maven-web-app:b9a1b8949da79673e726215adc526fedf65a738e
        ports:
        - containerPort: 8080
